loopwhile.BaggleSeeker.scala.error
Erreur de compilation :
BaggleSeeker:4: error: not found: value prendbiscuit
    prendbiscuit()
    ^